<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blood Glucose</string>
    <!-- add_med strings -->
    <string name="string_next">Next</string>
    <string name="string_plus">+</string>
    <string name="string_home">Home</string>
    <string name="string_list_prod">List of products</string>
    <string name="string_profile">Profile</string>
    <string name="string_today">Today</string>
    <string name="string_graph">Sugar graph</string>
    <string name="string_calendar">Calendar</string>
    <string name="string_go">Go</string>
    <string name="string_glucose">Glucose</string>
    <string name="string_list_day">Daily mark</string>
    <string name="string_glucose_1">GLUCOSE</string>
    <string name="string_back">Back</string>
    <string name="string_dairy_pr">Dairy products</string>
    <string name="string_m_and_f">Meat and Fish</string>
    <string name="string_veg_and_fruits">Vegetables and Fruits</string>
    <string name="string_cardio">Cardio exercises</string>
    <string name="string_static_exer">Static exercises</string>
    <string name="string_power">Power exercises</string>
    <string name="string_grocery">Grocery</string>
    <string name="string_pastries_and_sweets">Pastries and Sweets</string>
    <string name="string_pills">Pills</string>
    <string name="string_insulin">Insulin syringe</string>
    <string-array name="list_dairy_pr">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="string_list_med">List of medications</string>
    <string name="string_list_exer">List of exercises</string>
    <string name="string_finish">Finish</string>
    <string name="string_advice_today">Advice of the day</string>
    <string name="string_read_more">Read more</string>
    <string name="string_advice">Advice</string>
    <string name="string_add_med">Add medications</string>
    <string name="string_add_exer">Add exercises</string>
    <string name="string_add_pr">Add products</string>
    <string name="string_gl_level">Glucose level</string>
    <string name="string_input">Input</string>
    <string name="string_title">Title </string>
    <string name="string_carbohydrates">Number of carbohydrates</string>
    <string name="string_fats">Number of fats</string>
    <string name="string_proteins">Number of proteins</string>
    <string name="string_type">Type </string>
    <string name="string_submit">Submit</string>
    <string name="string_sugar_level_high">high sugar level</string>
    <string name="string_normal_sugar_level">normal sugar level </string>
    <string name="string_sugar_levels_low">low sugar level</string>
    <string name="string_export">Export</string>
    <string name="input_glucose_level">input glucose level</string>
    <string name="input_exercise">input exercise</string>
    <string name="input_medication">input medication</string>
    <string name="input_product">input product</string>
    <string name="measure_your_sugar_level_n_take_your_medications_n_get_some_exercise">Measure your sugar level\n Take your medications\n Get some exercise</string>
    <string name="measure_your_sugar_level">Measure your sugar level</string>
    <string name="take_your_medications">Take your medications</string>
    <string name="get_some_exercise">Get some exercise</string>
    <string name="your_marks">Your marks</string>
    <string name="products">Products</string>
    <string name="exercises">Exercises</string>
    <string name="medications">Medications</string>
    <string name="today_products">Today\'s products</string>
    <string name="today_s_medications">Today\'s medications</string>
    <string name="today_s_exercises">Today\'s exercises</string>
    <string name="calories">Calories</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="proteins_today">Proteins:</string>
    <string name="fats_today">Fats:</string>
    <string name="carbs_today">Carbs:</string>
    <string name="calories_today">Calories:</string>
    <string name="bread_units_today">Bread units:</string>
    <string name="burnt_calories">Burnt calories</string>
    <string name="burnt_calories1">Burnt calories:</string>
    <string name="calories1">Calories:</string>
    <string name="proteins1">Proteins:</string>
    <string name="fats1">Fats:</string>
    <string name="carbohydrates1">Carbohydrates:</string>
    <string name="burnt_calories2">Burnt calories:</string>
    <string-array name="add_med">
        <item>Pills</item>
        <item>Insulin syringe</item>
    </string-array>
    <string-array name="add_exer">
        <item>Cardio exercises</item>
        <item>Static exercises</item>
        <item>Power exercises</item>
    </string-array>
    <string-array name="add_pr">
        <item>Dairy products</item>
        <item>Meat and Fish</item>
        <item>Vegetables and Fruits</item>
        <item>Grocery</item>
        <item>Pastries and Sweets</item>
    </string-array>
</resources>