<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <View
        android:id="@+id/rectangle_or_profile"
        android:layout_width="311dp"
        android:layout_height="102dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/orange_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/string_add_product"
        android:layout_width="268dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/string_add_pr"
        android:textColor="@color/color_text"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/spinner_add_products"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/beige_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/string_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/type_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="301dp"
        android:layout_marginBottom="10dp"
        android:text="@string/string_type"
        android:textColor="@color/color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner_add_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_or_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_products"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/beige_rectangle"
        android:hint="@string/input_product"
        android:textColorHint="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/string_carbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/glucose_level_edit_text"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add_products_back"
        style="@style/Base.Theme.BloodGlucose"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/orange_rectangle"
        android:text="@string/string_back"
        android:textColor="@color/color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/string_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_title"
        android:textColor="@color/color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/input_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_products_submit"
        style="@style/Base.Theme.BloodGlucose"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/orange_rectangle"
        android:text="@string/string_submit"
        android:textColor="@color/color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_products"
        app:layout_constraintVertical_bias="0.874" />

    <TextView
        android:id="@+id/string_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="306dp"
        android:text="@string/string_carbohydrates"
        android:textColor="@color/color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_carbohydrates_add_pr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_carbohydrates_add_pr"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintBottom_toTopOf="@+id/string_fats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/string_fats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="306dp"
        android:text="@string/string_fats"
        android:textColor="@color/color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_fats_add_pr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_fats_add_pr"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintBottom_toTopOf="@+id/string_prots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/string_prots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="306dp"
        android:text="@string/string_proteins"
        android:textColor="@color/color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_prots_add_pr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_prots_add_pr"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintBottom_toTopOf="@+id/button_add_products_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>